2006-07-03  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm: backport vasi's etc/apt fix from 2006-03-22

2006-06-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: recognize 10.4.7

2006-06-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: modify &additional_packages to match the changes in
	the set of essential packages

2006-06-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: don't internationalize dpkg-bootstrap

2006-06-12  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: allow %p/X11 as a valid path

2006-06-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: use the $distribution when comparing versions for a 
	'point release'

2006-05-31  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Don't append /cvsroot/fink to mirror types that
	now already have them

2006-05-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Use hostnames specified in anonymous-cvs or
	developer-cvs if available

2006-05-24  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Use current hostname for cvs fallback

2006-05-03  Daniel Macks  <dmacks@netspace.org>

	* Notify.pm, Notify/*.pm: Return true to use and require

2006-04-20  Alexander Hansen  <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:	Add 10.4.6 to supported OS flavors.

2006-04-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Check for %{PatchScript} using the correct case.

2006-04-08  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Validate PatchScript correctly even when file being
	validated is in the same directory from which 'fink validate' is 
	being run; also, recognize %{PatchScript} during validation no matter
	what its case.

2006-03-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Configure.pm, FinkVersion.pm.in: 10.4 has a bindist now

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Intel OS X now up to darwin8.5.3
